--- a/ADSB-Sniffer/build.gradle
+++ b/ADSB-Sniffer/build.gradle
@@ -6,15 +6,16 @@ buildscript {
         classpath 'com.android.tools.build:gradle:0.12.+'
     }
 }
-apply plugin: 'android'
+
+apply plugin: 'com.android.application'
 
 repositories {
     mavenCentral()
 }
 
 android {
-    compileSdkVersion 19
-    buildToolsVersion '19.0.1'
+    compileSdkVersion 20
+    buildToolsVersion '20.0'
 
     defaultConfig {
         minSdkVersion 14
@@ -39,9 +40,9 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:support-v4:+'
+    compile 'com.android.support:support-v4:20.0.0'
     compile 'com.google.android.gms:play-services:4.1.32'
     compile project(':NumberPickerDialog')
     compile 'commons-codec:commons-codec:1.3'
-    compile 'com.google.guava:guava:16.0.1@jar'
+    compile 'com.google.guava:guava:17.0@jar'
 }
