--- a/NumberPickerDialog/build.gradle
+++ b/NumberPickerDialog/build.gradle
@@ -6,19 +6,18 @@ buildscript {
         classpath 'com.android.tools.build:gradle:0.12.+'
     }
 }
-apply plugin: 'android-library'
+apply plugin: 'com.android.library'
 
 repositories {
     mavenCentral()
 }
 
 android {
-    compileSdkVersion 19
-    buildToolsVersion '19.1.0'
+    compileSdkVersion 20
+    buildToolsVersion '20.0'
 
     defaultConfig {
         minSdkVersion 14
-        targetSdkVersion 19
     }
 
     compileOptions {
