--- a/ADSB-Sniffer/build.gradle
+++ b/ADSB-Sniffer/build.gradle
@@ -28,8 +28,8 @@ android {
     }
     buildTypes {
         release {
-            runProguard true
-            proguardFile getDefaultProguardFile('proguard-android-optimize.txt')
+            //runProguard true
+            //proguardFile getDefaultProguardFile('proguard-android-optimize.txt')
         }
     }
     productFlavors {
