--- a/ADSB-Sniffer/build.gradle
+++ b/ADSB-Sniffer/build.gradle
@@ -3,7 +3,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:0.12.+'
+        classpath 'com.android.tools.build:gradle:0.14.2'
     }
 }
 
@@ -14,12 +14,11 @@ repositories {
 }
 
 android {
-    compileSdkVersion 20
-    buildToolsVersion '20.0'
+    compileSdkVersion 21
+    buildToolsVersion '21.1.1'
 
     defaultConfig {
         minSdkVersion 14
-        targetSdkVersion 19
     }
 
     compileOptions {
@@ -40,9 +39,9 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:support-v4:20.0.0'
-    compile 'com.google.android.gms:play-services:4.1.32'
+    compile 'com.android.support:support-v4:21.0.2'
+    compile 'com.google.android.gms:play-services:6.1.71'
     compile project(':NumberPickerDialog')
     compile 'commons-codec:commons-codec:1.3'
-    compile 'com.google.guava:guava:17.0@jar'
+    compile 'com.google.guava:guava:18.0@jar'
 }
