--- a/NumberPickerDialog/build.gradle
+++ b/NumberPickerDialog/build.gradle
@@ -3,7 +3,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:0.12.+'
+        classpath 'com.android.tools.build:gradle:0.14.2'
     }
 }
 apply plugin: 'com.android.library'
@@ -13,8 +13,8 @@ repositories {
 }
 
 android {
-    compileSdkVersion 20
-    buildToolsVersion '20.0'
+    compileSdkVersion 21
+    buildToolsVersion '21'
 
     defaultConfig {
         minSdkVersion 14
